fixed alignment and added hover effects on all links

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header {
   position: relative;
   margin: 5px;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 30px;
 }
 
 .disc {
@@ -29,13 +30,10 @@ header {
   border-width: 1px;
   color: hsl(294, 9%, 44%);
   font-size: 18px;
-  padding: 20px 30px;
   height: 500px;
   width: 100%;
-  text-align: center;
   display: flex;
   justify-content: center;
-  text-align: center;
 }
 
 .card-body {
@@ -70,6 +68,11 @@ header {
   border: 5px solid black;
 }
 
+#generate-link img:hover{
+  width: 225px;
+  height: 225px;
+}
+
 .link-text {
   background-color:rgb(179, 16, 16);
   color: white;
@@ -77,8 +80,6 @@ header {
   text-decoration: none; 
   font: 600;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  width: 200px;
-  align-items: center;
 }
 
 #build-link {
@@ -94,17 +95,22 @@ header {
   border: 5px solid black;
 }
 
+#build-link img:hover{
+  width: 225px;
+  height: 225px;
+}
+
 #dragon1 {
   width: 100%;
   height: 100%;
   transform: scaleX(-1);
-  margin: 0px 50px;
+  margin: 0px 100px 30px 100px;
 }
 
 #dragon2 {
   width: 100%;
   height: 100%;
-  margin: 0px 50px;
+  margin: 0px 100px 30px 100px;
 }
 
 .link-items {
@@ -122,6 +128,11 @@ header {
  font-size: 15px;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  font-weight: 600;
+}
+
+.contact-us a:hover {
+  font-size: 20px;
+  color: rgb(179, 16, 16);
 }
 .credits {
 float:right;
